--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ cohere>=4.0.0
 # pyperclip>=1.8.2  # Windows 환경에서 문제가 있어 JavaScript 기반 클립보드 사용
 
 # 벡터 분류 기능을 위한 선택적 의존성 (requirements-optional.txt 참조)
-# chromadb>=0.4.0
-# sentence-transformers>=2.2.0 
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+openpyxl>=3.1.0 
