--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,13 +1,12 @@
 [server]
+# Streamlit Cloud에서 ChromaDB 호환성을 위한 설정
 maxUploadSize = 200
-enableXsrfProtection = false
-enableCORS = false
+maxMessageSize = 200
 
-[browser]
-gatherUsageStats = false
+[runner]
+# 메모리 사용량 제한
+maxMemoryUsage = 1
 
-[theme]
-primaryColor = "#FF6B6B"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F0F2F6"
-textColor = "#262730"
+[logger]
+# 로그 레벨 설정
+level = "info"
