--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ cohere>=4.0.0
 # 벡터 분류 기능을 위한 선택적 의존성 (requirements-optional.txt 참조)
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
-openpyxl>=3.1.0 
+openpyxl>=3.1.0
+# ChromaDB 호환성을 위한 추가 의존성
+duckdb>=0.9.0 
