--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ anthropic>=0.18.0
 cohere>=4.0.0
 # pyperclip>=1.8.2  # Windows 환경에서 문제가 있어 JavaScript 기반 클립보드 사용
 
-# 벡터 분류 기능을 위한 선택적 의존성 (requirements-optional.txt 참조)
-# ChromaDB SQLite3 호환성 문제로 인해 버전 다운그레이드
-chromadb==0.3.29
+# 벡터 분류 기능을 위한 의존성
+# FAISS 벡터 검색 (Streamlit Cloud 호환)
+faiss-cpu>=1.7.4
 sentence-transformers>=2.2.0
 openpyxl>=3.1.0
+# ChromaDB SQLite3 호환성 문제로 인해 버전 다운그레이드
+chromadb==0.3.29
 # ChromaDB 호환성을 위한 추가 의존성
 duckdb>=0.9.0
 # SQLite3 호환성 문제 해결 (Windows 환경)
